tests/typecheck/should_compile/tc261.hs
{-# LANGUAGE TypeOperators #-}
module TcOK where

newtype (f <.> g) a = Compose (f (g a))
